# argus

./: .env.example  .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  Dockerfile  Dockerfile.jetson  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/: copilot-instructions.md
configs/: default.yaml
docs/: architecture.md  argus_ux_v2_enhancements_5.md  requirements.md  roadmap.md  upgrade-tasks.md
docs/enable_checklists/: auto_retraining.md  classifier_yolo_world.md  cross_camera_corroboration.md  segmenter_sam2.md
scripts/: build_eval_set_from_inference_records.py  build_opencv_cuda.sh  capture_baseline.py  evaluate_regression.py  export_model.py  generate_synthetic.py  jetson_setup_nvidia_docker.sh  setup_remote_sshkey.py  simulate_camera.py  train_model.py
src/argus/: __init__.py  __main__.py
src/argus/alerts/: calibration.py  dispatcher.py  feedback.py  grader.py
src/argus/anomaly/: _trainer_export.py  backbone_manager.py  backbone_trainer.py  baseline.py  baseline_lifecycle.py  classifier.py  dataset_selection.py  detector.py  drift.py  ensemble.py  job_executor.py  metrics.py  model_compare.py  model_package.py  model_router.py  quality.py  segmenter.py  shadow_runner.py  trainer.py  training_validator.py
src/argus/capture/: baseline_job.py  camera.py  frame_buffer.py  frame_filter.py  gige_capture.py  health.py  manager.py  post_review.py  quality.py  samplers.py
src/argus/config/: loader.py  schema.py
src/argus/contracts/: validation.py
src/argus/core/: active_learning.py  adaptive_threshold.py  alert_ring_buffer.py  anomaly_postprocess.py  circuit_breaker.py  correlation.py  degradation.py  diagnostics.py  error_channel.py  event_bus.py  frame_quality.py  health.py  metrics.py  (+11 more)
tests/: conftest.py  test_alert_replay_integration.py  test_frame_quality.py
tests/integration/: conftest.py  test_alert_integration.py  test_alert_model_version.py  test_camera_manager.py  test_dashboard_api.py  test_pipeline_integration.py  test_runtime_imports.py
tests/lint/: test_mjpeg_dedicated_executor.py  test_no_base_http_middleware.py  test_no_hardcoded_audit_operator.py  test_orm_auto_migrate.py
tests/unit/: test_adaptive_threshold.py  test_alert_grader.py  test_alert_recording.py  test_alert_ring_buffer.py  test_alert_workflow.py  test_alerts_route.py  test_alignment.py  test_anomaly_postprocess.py  test_auth.py  test_backbone_manager.py  test_backpressure.py  test_baseline.py  test_baseline_job.py  test_baseline_lifecycle.py  test_batch_inference.py  test_calibration.py  test_camera.py  test_camera_groups.py  test_camera_health.py  test_circuit_breaker.py  test_classifier.py  test_config.py  test_config_loader.py  test_correlation.py  test_corroboration_suppression.py  test_dashboard.py  test_data_contracts.py  test_database.py  test_dataset_merger.py  test_dataset_selection.py  test_degradation.py  test_degradation_manager.py  test_diagnostics.py  test_dispatcher.py  test_drift.py  test_ensemble.py  test_error_channel.py  test_event_bus.py  test_feedback.py  test_feedback_queue.py  (+57 more)
web/: README.md  index.html  migrate_css.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  main.ts  style.css
(+216 files in other folders)
