[project]
name = "argus"
version = "0.1.0"
description = "General-purpose edge visual anomaly and foreign object detection system for fixed cameras"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.10.0",
    "ultralytics>=8.3.0",
    "anomalib>=2.0.0,<3.0.0",
    "openvino>=2024.0.0",
    "onnxscript>=0.6.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "scikit-image>=0.24.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "janus>=1.0.0",
    "apscheduler>=3.10.0",
    "faiss-cpu>=1.7.0",
    "av>=12.0.0",
    "prometheus-client>=0.21.0",
    "sahi>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
]
quantize = ["nncf>=2.7.0"]
segment = ["sam2>=1.0"]
polarization = ["polanalyser>=1.0"]
lucid = ["arena-api>=2.0"]
# FLIR Spinnaker: PySpin is distributed via FLIR's SDK installer, not PyPI.
# Install manually from https://www.flir.com/products/spinnaker-sdk/
# flir = ["PySpin"]

[project.scripts]
argus = "argus.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "slow: marks tests that take >10s to run",
    "benchmark: marks performance benchmark tests",
    "chaos: marks chaos/fault-injection tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
